@@ -490,7 +490,7 @@ static DCapsDef Cap0x03F0_0x0505 =
 static DCapsDef Cap0x03F0_0x0605 =
 {
 	/* DataOrigin (x, y), ShadingOriginY */
-	{{ 0, 209}, 20, -1, {2550, 3508 }, { 50,  50}, COLOR_BW },
+	{{ 0, 209},  0, -1, {2550, 3508 }, { 50,  50}, COLOR_BW },
     {{ 0,   0},  0, -1, {0, 0}, { 0, 0 }, 0 }, /* No film scanner module    */
     {{ 0,   0},  0, -1, {0, 0}, { 0, 0 }, 0 }, /* No film scanner module    */
     {{ 0,   0},  0, -1, {0, 0}, { 0, 0 }, 0 }, /* No ADF                    */
@@ -1921,8 +1921,8 @@ static HWDef Hw0x04A9_0x2207_0 =
 
     0x00,   /* bReg 0x27 color mode                           */
     2,      /* bReg 0x29 illumination mode                    */
-	{ 3,  0,    0, 23, 3472,  0,    0 },
-	{ 2, 23, 8870, 23, 5055, 23, 2828 },
+	{ 3,  0,     0, 23, 3937,  0,    0 },
+	{ 2, 23, 12000, 23, 5500, 23, 3900 },
 
     1,      /* StepperPhaseCorrection (reg 0x1a + 0x1b)       */
     0,      /* bOpticBlackStart (reg 0x1c)                    */
@@ -1955,7 +1955,7 @@ static HWDef Hw0x04A9_0x2207_0 =
     0,      /* test mode ADC Output CODE LSB (reg 0x5d)       */
     0,      /* test mode (reg 0x5e)                           */
     _LM9832,
-    MODEL_CANON1220
+    MODEL_CANON1200
 };
 
 /** Canon 670/676/LiDE20 */
@@ -2092,7 +2092,7 @@ static HWDef Hw0x04A9_0x220E_0 =
     0,      /* test mode ADC Output CODE LSB (reg 0x5d)       */
     0,      /* test mode (reg 0x5e)                           */
     _LM9833,
-    MODEL_CANON1240
+    MODEL_CANON1200
 };
 
 /******************** all available combinations *****************************/
@@ -2286,23 +2286,7 @@ static ClkMotorDef Motors[] = {
 	    { 12.0, 12.0, 12.0, 12.0, 12.0, 12.0, 12.0, 12.0, 12.0, 12.0 }
 	},
 
-	{ MODEL_CANON1220, 8, 51, 6,
-		/* Motor settings (PWM and PWM_Duty) */
-		/* <=75dpi       <=100dpi      <=150dpi      <=200dpi      <=300dpi  */
-	    {{ 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 },
-
-		/* <=400dpi      <=600dpi      <=800dpi      <=1200dpi     <=2400dpi */
-		 { 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 }},
-        /* Color mode MCLK settings */
-	    { 6.0, 6.0, 3.0, 3.0, 6.0, 6.0, 6.0, 6.0, 2.5, 6.0 },
-	    { 6.0, 6.0, 3.0, 3.0, 6.0, 6.0, 6.0, 6.0, 2.5, 6.0 },
-
-		/* Gray mode MCLK settings */
-	    { 18.0, 15.0, 12.0, 12.0, 9.5, 6.5, 6.0, 6.0, 6.0, 6.0 },
-	    { 18.0, 15.0, 12.0, 12.0, 9.5, 6.5, 6.0, 6.0, 6.0, 6.0 }
-	},
-
-	{ MODEL_CANON1240, 8, 51, 3,
+	{ MODEL_CANON1200, 8, 51, 3,
 		/* Motor settings (PWM and PWM_Duty) */
 		/* <=75dpi       <=100dpi      <=150dpi      <=200dpi      <=300dpi  */
 	    {{ 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 }, { 8, 31, 1 },
